# Photo-Server

./: .gitignore  Cargo.toml  README.md
data/albums/: help.md  help.txt
data/albums/album_test/: config.cfg  readme.md
data/config/: config.cfg
data/static/: index.css  index.css.map  index.scss
data/static/album/: index.js
data/template/: album.html  index.html
src/: album.rs  cache.rs  image.rs  main.rs  markdown.rs  serve_static.rs
src/routes/: index.rs  mod.rs
src/routes/album/: album.rs  cover.rs  mod.rs  page.rs  photo.rs  photos.rs  preview.rs  thumb.rs
