[package]
edition = "2021"
name = "photo_server"
version = "0.3.0"

[dependencies]
afire = "1.2.0"
simple_config_parser = "1.0.0"

base16ct = {version = "0.1.1", features = ["alloc"]}
fast_image_resize = "2.2.0"
hashbrown = "0.13.1"
image = "0.24.5"
indicatif = "0.17.2"
lazy_static = "1.4.0"
markdown = "0.3"
md5 = "0.7.0"
mut_static = "5.0.0"
regex = "1.7.0"
